--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
         <h1>Hello.</h1>
         <p>
             Welcome to my personal website, which I developed using Flask and Boostrap.
-            Here you will find my various digital work, from graphic design to interactive programs written by me!
+            Here you will find my various digital work, from graphic design to computer programs written by me!
             If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
             for this website, please click the button below.</p>
         <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">Github &raquo;</a></p>
