changed html to HTML

--- a/templates/programs.html
+++ b/templates/programs.html
@@ -50,7 +50,7 @@
         <div class="col-lg-4">
             <div class="text-center">
                 <h2>AutoPlotter</h2>
-                <p class="text-muted">C++/JavaScript/html<br /></p>
+                <p class="text-muted">C++/JavaScript/HTML<br /></p>
                 <img class="imgframe" src="static/img/plotter_thumbnail.png" height="225" width="300">
             </div>
             <p><br /></p>
