--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ url_for ('static', filename='grey_bg.css') }}" />
         <link rel="stylesheet" href="{{ url_for('static', filename='main_style.css') }}" />
+        <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" />
     </head>
 
     <body>
