changed name: programs to projects

--- a/templates/about.html
+++ b/templates/about.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li class="active"><a href="/about">About</a></li>
-        <li><a href="/programs">Programs</a></li>
+        <li><a href="/projects">Projects</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
@@ -55,6 +55,6 @@
         found on this website. <br/>
     </p>
 
-    <a href={{ url_for('static', filename='pdf/cv_1pgPDF.pdf') }}><span class="glyphicon glyphicon-file"></span> Curriculum Vitae</a>
+    <a href={{ url_for('static', filename='pdf/cv_1pgPDF.pdf') }}><span class="glyphicon glyphicon-file"></span> R&eacute;sum&eacute;</a>
 </div>
 {% endblock %}
