--- a/templates/projectmetis.html
+++ b/templates/projectmetis.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li class="active"><a href="/programs">Programs</a></li>
+        <li class="active"><a href="/projects">Projects</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
@@ -42,7 +42,7 @@
             better understand how the program is performing.
         </p>
         <p>
-            <a class="btn btn-success btn-lg" href="/programs/projectmetis/features" role="button">Features &raquo;</a>
+            <a class="btn btn-success btn-lg" href="/projects/projectmetis/features" role="button">Features &raquo;</a>
             <a class="btn btn-primary btn-lg" href="https://github.com/jkguiang/ProjectMetis/tree/master/webinterface" role="button">Github &raquo;</a>
         </p>
     </div>
