--- a/templates/projectmetis_web.html
+++ b/templates/projectmetis_web.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li class="active"><a href="/programs">Programs</a></li>
+        <li class="active"><a href="/projects">Projects</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
@@ -47,7 +47,7 @@
             <div class="sidebar-nav-fixed affix">
                 <div class="well">
                     <ul class="nav">
-                        <li class="active"><a href="/programs/projectmetis">Metis: Log Module</a></li>
+                        <li class="active"><a href="/projects/projectmetis">Metis: Log Module</a></li>
                         <li><a href="#image_1">Collapsable Links</a></li>
                         <li><a href="#image_2">Graphs</a></li>
                         <li><a href="#image_3">Summaries</a></li>
