--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li class="active"><a href="/programs">Programs</a></li>
+        <li class="active"><a href="/projects">Projects</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
@@ -29,7 +29,7 @@
     <p><br /></p>
     <p><br /></p>
     <div class="page-header">
-        <h1>Programs</h1>
+        <h1>Projects</h1>
     </div>
 
     <div class="row">
@@ -45,7 +45,7 @@
                 detector at the LHC and consolidating various specific
                 samples into smaller, usable .root files.
             </p>
-            <p><a class="btn btn-primary" href="/programs/projectmetis" role="button">Learn More &raquo;</a></p>
+            <p><a class="btn btn-primary" href="/projects/projectmetis" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <div class="text-center">
@@ -58,7 +58,7 @@
                 AutoPlotter is a jQuery-based interface for a program I made
                 using C++ and ROOT that plots various information from CMS3 data.
             </p>
-            <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
+            <p><a class="btn btn-primary" href="/projects/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <div class="text-center">
@@ -72,7 +72,7 @@
                 guesswork out of CERN Data Quality Management and comes packaged
                 with a simple, but effective GUI.
             </p>
-            <p><a class="btn btn-primary" href="/programs/autodqm" role="button">Learn More &raquo;</a></p>
+            <p><a class="btn btn-primary" href="/projects/autodqm" role="button">Learn More &raquo;</a></p>
         </div>
     </div>
 </div>
