--- a/templates/autoplotter.html
+++ b/templates/autoplotter.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li class="active"><a href="/programs">Programs</a></li>
+        <li class="active"><a href="/projects">Projects</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
