--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/programs">Programs</a></li>
+        <li><a href="/projects">Projects</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/contact">Contact</a></li>
       </ul>
@@ -55,14 +55,14 @@
             AutoPlotter is a web interface for a C++ program that plots
             real CMS3 data and Monte Carlo simulations.
             </p>
-            <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
+            <p><a class="btn btn-primary" href="/projects/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <h3>AutoDQM</h3>
             <p>
             AutoDQM is a statistical tool for LHC Data Quality Management.
             </p>
-            <p><a class="btn btn-primary" href="/programs/autodqm" role="button">Learn More &raquo;</a></p>
+            <p><a class="btn btn-primary" href="/projects/autodqm" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <h3>Orca Logo</h3>
