--- a/templates/autoplotter.html
+++ b/templates/autoplotter.html
@@ -42,7 +42,7 @@
             the functionality of the web interface.
         </p>
         <p>
-            <a class="btn btn-success btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter" role="button">Launch &raquo;</a>
+            <a class="btn btn-success btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/autoplotter" role="button">Launch &raquo;</a>
             <a class="btn btn-primary btn-lg" href="https://github.com/jkguiang/AutoPlotter" role="button">Github &raquo;</a>
         </p>
     </div>
@@ -60,7 +60,7 @@
             AutoPlotter outputs, this web interface allows for simple and quick
             navigation.
             </p>
-            <p><a class="btn btn-primary" href="https://github.com/jkguiang/AutoPlotter/tree/master/webinterface" role="button">Github &raquo;</a></p>
+            <p><a class="btn btn-primary" href="https://github.com/jkguiang/AutoPlotter" role="button">Github &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <h3>Plotter</h3>
@@ -69,7 +69,7 @@
             I consolidated the plots I need into member functions of one
             main "plotter" class.
             </p>
-            <p><a class="btn btn-primary" href="https://github.com/jkguiang/AutoPlotter/blob/master/ooplt.C" role="button">Github &raquo;</a></p>
+            <p><a class="btn btn-primary" href="https://github.com/jkguiang/plotter/blob/master/ooplt.C" role="button">Github &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <h3>Data Parser</h3>
@@ -78,7 +78,7 @@
             of the Campagnari group. I wrote in various cuts that removed
             much of the background noise.
             </p>
-            <p><a class="btn btn-primary" href="https://github.com/jkguiang/AutoPlotter/blob/master/ScanChain.C#L78-L230" role="button">Github &raquo;</a></p>
+            <p><a class="btn btn-primary" href="https://github.com/jkguiang/plotter/blob/master/ScanChain.C#L78-L230" role="button">Github &raquo;</a></p>
         </div>
     </div>
 </div> <!-- End featured content -->
